# vpn_per_hours_tests_and_games

./: README.md
ansible/: inventory.ini  pptp_setup.yml
ansible/files/: chap-secrets.j2  pptpd-options.j2  pptpd.conf.j2  sysctl.conf.j2
scripts/: .createDropletTest.py.swp  .deleteDropletTest.py.swp  ansible.cfg  createDropletTest.py  deleteDropletTest.py  example_server.py  route53Test.py  send_bytes.sh  server.py
scripts/ManagerTests/: test.py
scripts/aws_scripts/: Route53Manager.py  client.py
scripts/aws_scripts/.ropeproject/: globalnames  objectdb
scripts/vpnServerManager/: .gitignore  CMakeLists.txt  conanfile.txt  log  vpn.sql
scripts/vpnServerManager/Testing/Temporary/: CTestCostData.txt
scripts/vpnServerManager/lib/database_handler/: .DatabaseHandler.cpp.swp  .DatabaseHandler.h.swp  .databaseHandler.cpp.swp  DatabaseHandler.cpp  DatabaseHandler.h  databaseHandler.cpp  databaseHandler.h
scripts/vpnServerManager/lib/log/: Log.cpp  Log.h  Logger.cpp  Logger.h
scripts/vpnServerManager/lib/manager_node/: ManagerNode.cpp  ManagerNode.h
scripts/vpnServerManager/lib/server/: DigitalOceanServer.cpp  DigitalOceanServer.h  Server.cpp  Server.h  ServerFactory.cpp  ServerFactory.h  VultrServer.cpp  VultrServer.h  keys_functions.h
scripts/vpnServerManager/lib/server_pointer/: ServerPointer.cpp  ServerPointer.h
scripts/vpnServerManager/lib/server_request/: ServerRequest.cpp  ServerRequest.h
scripts/vpnServerManager/lib/ssh_tester/: sshTester.cpp  sshTester.h
scripts/vpnServerManager/lib/vpn_lock/: VPNLock.cpp  VPNLock.h
scripts/vpnServerManager/lib/vpn_log/: VPNLog.cpp  VPNLog.h
scripts/vpnServerManager/src/: VPNManagerDeamon.cpp  http_server_test.cpp  log_test.cpp  main_server.cpp  mysql_test.cpp  server_pointer.cpp  server_test.cpp  socket_server.cpp  ssh_test.cpp  test.cpp
scripts/vpnServerManager/tests/: server_request_test.cpp
ssh_keys/: id_rsa  id_rsa.pub  vpnproject-aws-credentials.csv
